--- a/harold.css
+++ b/harold.css
@@ -9,6 +9,10 @@ html, body{
     font-size: 16px;
     font-family: sans-serif;
     min-height: 100vh;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 }
 
 body{
