--- a/style.css
+++ b/style.css
@@ -107,8 +107,8 @@ body{
 }
 .disk1:before {
     display: inline-block;
-    width: 87px;
-    height: 87px;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
     box-shadow: inset 0 0 0 27px #00C261;
     background: #ffffff;
@@ -161,13 +161,42 @@ body{
     right: 2rem;
     height: 150px;
     width: 107px;
+    background-size: contain;
+    background-position: center center;
+    background-repeat: no-repeat;
     transform-origin: 95% 0%;
     transform: rotate(-20deg);
     transition: transform .5s;
 }
-.turntable-arm.active{
+.arm1{
+    background-image: url("./img/brazo1.png");
+}
+.arm2{
+    height: 170px;
+    width: 107px;
+    background-image: url("./img/brazo2.png");
+    transform-origin: 90% 20%;
+}
+.arm3{
+    top: 1.5rem;
+    right: 3rem;
+    height: 190px;
+    width: 140px;
+    background-image: url("./img/brazo3.png");
+    transform-origin: 90% 20%;
+    transform: rotate(-37deg);
+}
+.arm1.active{
     transform: rotate(-14deg);
     animation: turntable-arm-spin linear 4s 2s alternate infinite;
+}
+.arm2.active{
+    transform: rotate(-11deg);
+    animation: turntable-arm2-spin linear 4s 2s alternate infinite;
+}
+.arm3.active{
+    transform: rotate(-30deg);
+    animation: turntable-arm3-spin linear 4s 2s alternate infinite;
 }
 @keyframes turntable-arm-spin{
     from{
@@ -175,6 +204,22 @@ body{
     }
     to{
         transform: rotate(2deg);
+    }
+}
+@keyframes turntable-arm2-spin{
+    from{
+        transform: rotate(-11deg);
+    }
+    to{
+        transform: rotate(10deg);
+    }
+}
+@keyframes turntable-arm3-spin{
+    from{
+        transform: rotate(-30deg);
+    }
+    to{
+        transform: rotate(-14deg);
     }
 }
 
