--- a/style.css
+++ b/style.css
@@ -232,9 +232,74 @@ body{
 }
 
 .volume_bar{
-    overflow: hidden;
     width: 4rem;
-    height: 4rem;
+}
+
+.volume_control{
+    -webkit-appearance: none;
+    position: relative;
+    display: inline-block;
+    top: 0;
+    left: 50%;
+    width: 4rem;
+    height: .35rem;
+    border-radius: 50px;
+    outline: none;
+    box-shadow: 0 0 0 7px var(--primary);
+    transform-origin: center;
+    transform: translate(-50%, 0) scaleX(0);
+    transition: transform .1s;
+}
+.volume_bar:hover{ overflow: initial; }
+.volume_bar:hover .volume_control{
+    transform: translate(-50%, 0) scaleX(1);
+}
+.volume_control::-webkit-slider-runnable-track {
+  background-color: #383538;
+  border-radius: 50px;
+  height: .35rem;
+}
+.volume_control::-webkit-slider-thumb{
+  -webkit-appearance: none;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #fff;
+  cursor: pointer;
+  transform: translateY(-3px);
+}
+.volume_control::-moz-range-track{
+  height: .5rem;
+  background-color: rgba(56,53,56, .35);
+  border-radius: 50px;
+  border: none;
+  outline: none;
+}
+.volume_control::-moz-range-thumb{
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #fff;
+  cursor: pointer;
+}
+.volume_control::-ms-track {
+  background-color: rgba(56,53,56, .35);
+  border-radius: 50px;
+  height: .35rem;
+}
+.volume_control::-ms-thumb {
+  background-color: #fff;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  margin-top: -9px;
+}
+.volume_control::-ms-fill-lower {
+  background-color: tomato;
+}
+
+.volume_control::-ms-fill-upper {
+  background-color: rgba(56,53,56, .35);
 }
 
 .control_btn{
@@ -276,9 +341,13 @@ body{
     padding: 1rem;
     color: white;
 }
+.turntable-time > p{
+    display: inline-block;
+}
 .turntable-time__current{
     font-family: font003;
 }
 .turntable-time__last{
     font-family: font004;
+    font-size: 1.73rem;
 }
