--- a/style.css
+++ b/style.css
@@ -123,11 +123,19 @@ body{
     background:
             linear-gradient(35deg, transparent 43%, rgba(180, 180, 180, .05) 43%, rgba(225, 225, 225, .2), rgba(180, 180, 180, .05) 57%, transparent 57%) no-repeat 0 100%,
             linear-gradient(55deg, transparent 43%, rgba(180, 180, 180, .05) 43%, rgba(225, 225, 225, .2), rgba(180, 180, 180, .05) 57%, transparent 57%) no-repeat 0 100%,
+            repeating-radial-gradient(#252525, #0A0A0A 1px, #2E2E2E 2px, #2a2928 3px);
+}
+.disk4{
+    border: 10px solid #2C2C2C;
+    box-shadow: inset 0 0 0 1px #A3898A;
+    background:
+            linear-gradient(35deg, transparent 43%, rgba(180, 180, 180, .05) 43%, rgba(225, 225, 225, .2), rgba(180, 180, 180, .05) 57%, transparent 57%) no-repeat 0 100%,
+            linear-gradient(55deg, transparent 43%, rgba(180, 180, 180, .05) 43%, rgba(225, 225, 225, .2), rgba(180, 180, 180, .05) 57%, transparent 57%) no-repeat 0 100%,
             linear-gradient(-38deg, transparent 45%, rgba(180, 180, 180, .05) 45%, rgba(225, 225, 225, .2), rgba(180, 180, 180, .05) 55%, transparent 55%) no-repeat 0 100%,
             linear-gradient(-52deg, transparent 45%, rgba(180, 180, 180, .05) 45%, rgba(225, 225, 225, .2), rgba(180, 180, 180, .05) 55%, transparent 55%) no-repeat 0 100%,
             repeating-radial-gradient(#252525, #0A0A0A 1px, #2E2E2E 2px, #2a2928 3px);
 }
-.disk2:before{
+.disk2:before, .disk4:before{
     display: inline-block;
     box-sizing: border-box;
     width: 75px;
